[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "nestio"
version = "0.1.1"
description = "Async-first nested storage with dot-path access and atomic writes — supports JSON, TOML, YAML, and TOON"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

authors = [
    {name = "MrBaconHat"}
]

dependencies = [
    "aiofiles>=23.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "toons>=0.7.0",
    "pyyaml>=6.0.0"
]

keywords = [
    "async",
    "json",
    "toml",
    "yaml",
    "toon",
    "storage",
    "database",
    "nest",
    "dotpath",
    "llm"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Framework :: AsyncIO"
]


[project.urls]
Homepage = "https://github.com/MrBaconHat/nestio"
Repository = "https://github.com/MrBaconHat/nestio"
Issues = "https://github.com/MrBaconHat/nestio/issues"


[tool.setuptools]
packages = ["nestio", "nestio.Files"]